Archive2/ac/77745646bb408d/output
main.cpp:7:14: error: invalid operands to binary expression ('istream' (aka 'basic_istream<char>') and 'int')
    std::cin >> 2;
    ~~~~~~~~ ^  ~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:120:7: note: candidate function not viable: no known conversion from 'int' to '__istream_type &(*)(__istream_type &)' for 1st argument
      operator>>(__istream_type& (*__pf)(__istream_type&))
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:124:7: note: candidate function not viable: no known conversion from 'int' to '__ios_type &(*)(__ios_type &)' for 1st argument
      operator>>(__ios_type& (*__pf)(__ios_type&))
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:131:7: note: candidate function not viable: no known conversion from 'int' to 'std::ios_base &(*)(std::ios_base &)' for 1st argument
      operator>>(ios_base& (*__pf)(ios_base&))
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:168:7: note: candidate function not viable: no known conversion from 'int' to 'bool &' for 1st argument
      operator>>(bool& __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:172:7: note: candidate function not viable: no known conversion from 'int' to 'short &' for 1st argument
      operator>>(short& __n);
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:175:7: note: candidate function not viable: no known conversion from 'int' to 'unsigned short &' for 1st argument
      operator>>(unsigned short& __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:179:7: note: candidate function not viable: expects an l-value for 1st argument
      operator>>(int& __n);
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:182:7: note: candidate function not viable: no known conversion from 'int' to 'unsigned int &' for 1st argument
      operator>>(unsigned int& __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:186:7: note: candidate function not viable: no known conversion from 'int' to 'long &' for 1st argument
      operator>>(long& __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:190:7: note: candidate function not viable: no known conversion from 'int' to 'unsigned long &' for 1st argument
      operator>>(unsigned long& __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:195:7: note: candidate function not viable: no known conversion from 'int' to 'long long &' for 1st argument
      operator>>(long long& __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:199:7: note: candidate function not viable: no known conversion from 'int' to 'unsigned long long &' for 1st argument
      operator>>(unsigned long long& __n)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:214:7: note: candidate function not viable: no known conversion from 'int' to 'float &' for 1st argument
      operator>>(float& __f)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:218:7: note: candidate function not viable: no known conversion from 'int' to 'double &' for 1st argument
      operator>>(double& __f)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:222:7: note: candidate function not viable: no known conversion from 'int' to 'long double &' for 1st argument
      operator>>(long double& __f)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:235:7: note: candidate function not viable: no known conversion from 'int' to 'void *&' for 1st argument
      operator>>(void*& __p)
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:259:7: note: candidate function not viable: no known conversion from 'int' to '__streambuf_type *' (aka 'basic_streambuf<char, std::char_traits<char> > *') for 1st argument
      operator>>(__streambuf_type* __sb);
      ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:727:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'int' to 'unsigned char &' for 2nd argument
    operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:732:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'int' to 'signed char &' for 2nd argument
    operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:774:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'int' to 'unsigned char *' for 2nd argument
    operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:779:5: note: candidate function [with _Traits = std::char_traits<char>] not viable: no known conversion from 'int' to 'signed char *' for 2nd argument
    operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
    ^
main.cpp:3:6: note: candidate function not viable: no known conversion from 'istream' (aka 'basic_istream<char>') to 'const std::ostream' (aka 'const basic_ostream<char>') for 1st argument
void operator>>(std::ostream const&, int) {}
     ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/istream:872:5: note: candidate function [with _CharT = char, _Traits = std::char_traits<char>, _Tp = int] not viable: no known conversion from 'istream' (aka 'basic_istream<char>') to 'basic_istream<char, std::char_traits<char> > &&' for 1st argument
    operator>>(basic_istream<_CharT, _Traits>&& __is, _Tp& __x)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/istream.tcc:923:5: note: candidate template ignored: deduced conflicting types for parameter '_CharT' ('char' vs. 'int')
    operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/streambuf:168:9: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'int'
        operator>>(basic_istream<_CharT2, _Traits2>&,
        ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/istream.tcc:955:5: note: candidate template ignored: could not match '_CharT *' against 'int'
    operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
    ^
1 error generated.
